Make app runable standalone.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="google" value="notranslate">
-		<link rel="stylesheet" href="/style/style.css">
+		<link rel="stylesheet" href="style/style.css">
 	</head>
 	<body>
 		<div class="canvas">
@@ -24,8 +24,8 @@
 			</div>
 		</div>
 		<script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-		<script src="/scripts/jquery/jquery.transit.min.js"></script>
-		<script src="/scripts/ImagePoolController.js"></script>
-		<script src="/scripts/main.js"></script>
+		<script src="scripts/jquery/jquery.transit.min.js"></script>
+		<script src="scripts/ImagePoolController.js"></script>
+		<script src="scripts/main.js"></script>
 	</body>
 </html>
