Improve canvas "fullscreen" method.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="canvas">
 			<div class="background"></div>
-			<div class="portrait"></div>
+			<div class="portrait hidden"></div>
 
 			<div class="trackDetails">
 				<div class="artistNameContainer">
