--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="content"></div>
 			</div>
 		</div>
-		<script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
+		<script src="scripts/jquery/jquery-2.0.0.min.js"></script>
 		<script src="scripts/jquery/jquery.transit.min.js"></script>
 		<script src="scripts/ImagePoolController.js"></script>
 		<script src="scripts/main.js"></script>
