--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<body>
 		<div class="canvas">
 			<div class="background"></div>
-			<div class="portrait hidden"></div>
+			<div class="portrait hidden">
+				<div class="content"></div>
+			</div>
 
 			<div class="trackDetails">
 				<div class="artistNameContainer">
