--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 				</div>
 			</div>
 
+			<div class="queueFlow">
+				<div class="content">
+				</div>
+			</div>
+
 			<div class="biography">
 				<div class="content"></div>
 			</div>
@@ -28,6 +33,7 @@
 		<script src="scripts/jquery/jquery-2.0.0.min.js"></script>
 		<script src="scripts/jquery/jquery.transit.min.js"></script>
 		<script src="scripts/ImagePoolController.js"></script>
+		<script src="scripts/CoverFlowController.js"></script>
 		<script src="scripts/main.js"></script>
 	</body>
 </html>
